# srm

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  graph.yaml
capnp/: message.capnp  message.capnp.c++  message.capnp.h
include/srm/: core.h  err.h  msg.h  node.h  types.h  util.h
src/: alloc.rs  channel.rs  core.h  core.rs  err.cpp  err.h  error_code.rs  expected.cpp  expected.h  fnv1a.cpp  fnv1a.h  foreign_core_ref.h  foreign_error.rs  foreign_node.h  hash_map.h  hash_table.h  immobile.cpp  immobile.h  lib.rs  logging.rs  macro.h  main.rs  managed_core.h  master_core.cpp  master_core.h  msg_builder.cpp  msg_builder.h  node.h  node.rs  node_graph.rs  node_loader.cpp  node_loader.h  node_plugin.cpp  node_plugin.h  node_plugin.rs  node_plugin_db.h  node_util.cpp  node_util.h  plat.cpp  plat.h  (+12 more)
src/core/: core_ffi.rs  message_builder_ffi.rs  mod.rs  publisher_ffi.rs  subscriber_ffi.rs
src/ffi/: core.rs  foreign_error.rs  mod.rs  msg.rs  node.rs  util.rs
