[package]
name = "srm"
version = "0.2.0"
authors = ["Gregory Meyer <gregjm@umich.edu>"]
edition = "2018"

[dependencies]
capnp = "^0.9.4"
crossbeam = "^0.7.1"
ctrlc = "^3.1.1"
env_logger = "^0.6.0"
fnv = "^1.0.6"
libc = "^0.2.48"
libloading = "^0.5.0"
lock_api = "^0.1.5"
log = "^0.4.6"
parking_lot = "^0.7.1"
rayon = "^1.0.3"
serde = { version = "^1.0.88", features = ["derive"] }
serde_yaml = "^0.8.8"
